--- a/index.html
+++ b/index.html
@@ -1,48 +1,9 @@
 <html>
 <head>
+<link rel="stylesheet" href="pretty.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script src="calculate.js"></script>
-<style>
-td, th {
-  width: 10rem;
-  height: 2rem;
-  border: 1px solid #333333;
-  text-align: center;
- 
-}
-
-th {
-   border-color: white;
-}
-body{
-	background-color:#3fb399;
-    margin-left: 25%;
-}
-body *{
-	font-size:22px;
-  color:#1f262a;
-  font-family:'Consolas', monospace;
-}
-button{
-	width:100%;
-	height:60px;
-	border-style:none;
-}
-.contianer{
-	width:480px;
-	 background-color: white;
-	 margin:120px auto;
-}
-#calculatorInput{
-	height: 120px;
-	font-size:40px;
-	vertical-align:bottom;
-	text-align:right;
-	padding-right:16px;
-	background-color:#ececec;
-}
-</style>
 </head>
 <body>
 
